# Parenting

./: Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly.yml
deploy/procfiles/: parenting.production.Procfile
docs/: fastapi.md
parenting/: app.py  logging.conf  utility.py
parenting/routers/: linebot.py  parenting.py  tdx.py
parenting/services/: event_type.py  itofoo.py  tdx.py
scripts/: heroku_deploy.sh
